<resources>
    <string name="app_name">Lunch Box</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="login">Login</string>
    <string name="done">Done</string>
    <string name="register">Register</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="logout">logout</string>
    <string name="google_maps_api_key">AIzaSyDzgOLduOOka9-W3yUjFa21meJ8Ar9Uf_o</string>
    <string name="search">Search</string>

    <!--Cart-->
    <string name="action_settings">Settings</string>

    <string name="product1">CHRISTIAN LOUBOUTIN</string>
    <string name="product1desc">So Kate Pumps</string>
    <string name="product1price">$675</string>

    <string name="empty_cart">Your Cart is Empty</string>
    <string name="action_orders">Orders</string>
</resources>
