<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="pin"
        app:theme="@style/ToolbarTheme">
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <ImageView
                android:id="@+id/img_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:gravity="center"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/product1"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/product1desc"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/product1price"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>


        <!-- bottom content layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            android:orientation="vertical"
            android:paddingBottom="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                   <!-- <Spinner
                        android:id="@+id/sizespinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:padding="10dp"
                        android:popupBackground="#ffffff"></Spinner>-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:padding="10dp"
                        android:text="QTY : "
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/qtyspinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:padding="10dp"
                        android:popupBackground="#ffffff"></Spinner>

                </LinearLayout>


                <!--           <LinearLayout
                               android:layout_width="match_parent"
                               android:layout_height="match_parent"
                               android:orientation="vertical"
                               >

                               <Spinner
                                   android:id="@+id/colorspinner"
                                   android:layout_width="wrap_content"
                                   android:layout_height="wrap_content"
                                   android:padding="10dp"
                                   android:popupBackground="#ffffff"
                                   android:layout_gravity="right"
                                   >
                               </Spinner>

                           </LinearLayout>
               -->


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addtocart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="ADD TO CART"                    android:textColor="@color/white"
                    app:backgroundTint="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>
        <!-- bottom content layout -->
    </LinearLayout>

</LinearLayout>
